# Linux-File-Viewer

./: CONTRIBUTING.md  Cargo.toml  README.md  app.manifest  build.rs  telemetry-id
.github/workflows/: release.yml
src/: main.rs
src/fs/: btrfs_fs.rs  disk.rs  linux_fs.rs  luks.rs  mod.rs  windows_fs.rs
src/ui/: app.rs  file_browser.rs  mod.rs
